2009-07-18  Patrice Dumas <pertusus@free.fr>

	* hal_interface.c: fix crash when there is no property when 
	removing device, patch from Dmitry A. Ermolov.

2009-07-06  Patrice Dumas <pertusus@free.fr>

	* doc/halevt.texi: add some tips regarding how to discover hal
	properties, report from DoubleHP.

2009-07-04  Patrice Dumas <pertusus@free.fr>

	* halevt-mount/halevt-mount.c: warn if there is no device found 
	when umounting or listing a specific device. Report from Adrian 
	Mariano.

2009-05-11  Patrice Dumas <pertusus@free.fr>

	* manager.c: set errno to 0 before calling get*, as said in the 
	functions man pages, report by nb.
	* hal_interface.c: a * in Action value matches any action, report
	from gry. 
	* hal_interface.c, parse_config.c, parse_config.h: Mike Kasick 
	patch to add a match on the Condition value.

2009-04-26  Patrice Dumas <pertusus@free.fr>

	* halevt.xml: call halevt-umount only on volumes.
	* examples/: new directory for examples.

2009-04-24  Patrice Dumas <pertusus@free.fr>

	* README: add a PolicyKit.conf excerpt, thanks to nb.
	* halevt-mount/halevt-mount.c: only set the umask= if the filesystem
	supports it (report from nb).

2009-01-31  Patrice Dumas <pertusus@free.fr>

	* configure.ac, NEWS: 0.1.4 release
	* doc/*: hvmount man page, from Mike O'Connor
	* halevt-initscript: remove bashism (Mike O'Connor)
	* halevt.xml:  use an entity for the condition matching a 
	mountable device (Byron Clark)

2008-12-18  Patrice Dumas <pertusus@free.fr>

	* configure.ac, NEWS: 0.1.3 release
	* doc/references/Makefile.am: ship halevt-umount.1.html reference
	* configure.ac, src/match.c: adapt to boolstuff 0.1.12

2008-07-10  Patrice Dumas <pertusus@free.fr>

	* configure.ac, NEWS: 0.1.2 release.
	* halevt-mount/halevt-mount.c: add a missing break, patch from
	Matthijs van de Water.

2008-06-14  Patrice Dumas <pertusus@free.fr>

	* configure.ac, NEWS, halevt.spec.in: 0.1.1 release.
	* doc/Makefile.am, configure.ac: handle missing makeinfo case.
